Drop query parameters from linkedinurl